# the-coding-library

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  CMakeLists.txt  CMakeLists.txt.in  CMakePresets.json  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  build_and_test.yml  build_cpp11.yml  build_cpp14.yml  build_cpp17.yml  build_cpp20.yml  build_cpp23.yml  build_deb.yml  build_devcontainer.yml  c-cpp.yml  cmake-single-platform.yml  codeql.yml  devcontainer.yml  main.yml
benchmark/: CMakeLists.txt  byte_pair_coding.cpp  run_length_coding.cpp
include/: alphabets.h  binary_number.h  coding_library.hpp  defines.hpp  graph.h  huffman.h  table.h  types.h  types.hpp
include/coding_library/: coding_library.hpp  defines.hpp
include/coding_library/common/: alphabets.hpp  binary_number.hpp  graph.hpp  table.hpp  types.hpp
include/coding_library/lossless/: lossless.hpp
include/coding_library/lossless/dictionary/: lempel_ziv_77_coding.hpp
include/coding_library/lossless/dictionary/byte_pair_coding/: byte_pair.hpp  byte_pair_coding.hpp
include/coding_library/lossless/other/: burrows_wheeler_transform.hpp  move_to_front_transform.hpp
include/coding_library/lossless/other/run_length_coding/: run_length_coding.hpp  run_length_coding_impl.hpp  run_length_coding_impl_cpp20.hpp
include/coding_library/lossy/: lossy.hpp
include/coding_library/lossy/transform_type/: DCT1.hpp
include/common/: binary_number.hpp  graph.hpp  table.hpp
include/data_structures/: binary_digit.hpp  binary_number.h  binary_number.hpp  data_structures.hpp  graph.h  graph.hpp  table.h  table.hpp
include/lossless/: lossless.hpp
include/lossless/dictionary/: byte_pair_coding.h  byte_pair_coding.hpp  lempel_ziv_77_coding.h  lempel_ziv_77_coding.hpp
include/lossless/entropy/huffman/: huffman.h  huffman.hpp  huffman_adaptive.h  huffman_canonical.h  huffman_modified.h
include/lossless/entropy/huffman/fast/: huffman.hpp
include/lossless/other/: burrows_wheeler_transform.h  burrows_wheeler_transform.hpp  byte_pair_coding.h  move_to_front_transform.h  run_length_coding.h  run_length_coding.hpp
include/lossless/other/run_length_coding/: run_length_coding.hpp  run_length_coding_impl_cpp17.hpp
include/lossy/transform_type/: DCT1.h  DCT1.hpp
include/utils/: alphabets.h  alphabets.hpp  print.hpp  to_string.hpp
src/: CMakeLists.txt  huffman_enoding.cpp  main.cc  main.cpp
src/fast/: CMakeLists.txt  main.cc
test/: CMakeLists.txt  DCT1.cc  DCT1_test.cc  DCT1_test.cpp  burrows_wheeler_transform.cc  burrows_wheeler_transform_test.cc  burrows_wheeler_transform_test.cpp  byte_pair_coding.cc  byte_pair_coding_test.cc  byte_pair_coding_test.cpp  huffman_coding.cc  huffman_coding_test.cc  huffman_coding_test.cpp  lempel_ziv_77_coding_test.cc  lempel_ziv_77_coding_test.cpp  lempel_ziv_coding.cc  modified_huffman_coding.cc  move_to_front_transform.cc  move_to_front_transform_test.cc  move_to_front_transform_test.cpp  run_length_coding.cc  run_length_coding_test.cc  run_length_coding_test.cpp  unit_test.cc
tools/: run_clang_tidy.bash
